--- a/app/src/main/res/layout/activity_anim_menu.xml
+++ b/app/src/main/res/layout/activity_anim_menu.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.umpay.animation.animmenu.AnimMenuActivity">
+    tools:context="com.rgz.animation.animmenu.AnimMenuActivity">
 
     <include layout="@layout/menu_layout"></include>
 </RelativeLayout>
